--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,8 +3,6 @@
 @import "component/hero";
 @import "component/album";
 
-main {
-    @extend .container-xl;
-    @extend .py-3;
+body {
+    @extend .bg-light;
 }
-
