--- a/templates/layout/base.html.twig
+++ b/templates/layout/base.html.twig
@@ -16,7 +16,7 @@
     {% endblock %}
 </head>
 
-<body class="bg-light">
+<body>
     <section class="hero">
         <div class="container">
             <div class="row">
