--- a/templates/pizza/list.html.twig
+++ b/templates/pizza/list.html.twig
@@ -20,7 +20,7 @@
                                     <a href="{{ path('pizza.product') }}" class="btn">{{ 'View' }}</a>
                                     <span class="price">
                                         {{ pizza.price }}
-                                        <span class="text-danger user-select-none" title="{{ "The price of a pizza equals the total of all its ingredients plus %s%% of the total for the preparation."|format(50) }}">&#9432;</span>
+                                        <span class="price-help" title="{{ "The price of a pizza equals the total of all its ingredients plus %s%% of the total for the preparation."|format(50) }}">&#9432;</span>
                                     </span>
                                 </div>
                             </div>
