--- a/templates/pizza/partial/ingredient.html.twig
+++ b/templates/pizza/partial/ingredient.html.twig
@@ -9,6 +9,6 @@
            disabled
     >
 
-    <button class="btn btn-outline-danger" type="button" data-action="delete-ingredient#onDelete">&#10005;</button>
+    <button class="btn-delete" type="button" data-action="delete-ingredient#onDelete">&#10005;</button>
 </div>
 
